sumo/tests/traci/VariableRetrieval/VehicleType/errors/UnknownID/testclient_out.traci
TraCITestClient output file. Date: Sat Oct  9 00:29:25 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=165 varID=70 objID=xxx
.. Answered with error to command (165), [description: Vehicle type 'xxx' is not known]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
